# fred-cal

./: .dictionary.txt  .gitignore  CACHING.md  CLI.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  README.md  TESTING.md  deny.toml  flake.nix  renovate.json
.direnv/: flake-profile-11-link
.github/workflows/: ci.yml
fred-cal/: Cargo.toml
fred-cal/src/: api.rs  cache.rs  cli.rs  lib.rs  main.rs  models.rs  recurrence.rs  sync.rs
fred-cal/tests/: INTEGRATION_TEST_SUMMARY.md  TEST_SYNC_NOTES.md  integration_tests.rs  test_sync.rs
