[workspace]
members = ["fred-cal", "xtask"]
default-members = ["fred-cal"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
cargo_metadata = "0.23.1"
chrono = "0.4.42"
clap = "4.5.54"
clap-cargo = "0.18.3"
clap-verbosity-flag = "3.0.4"
color-eyre = "0.6.5"
dirs = "6.0.0"
duct = "1.1.1"
fast-dav-rs = "0.2.0"
icalendar = "0.17.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0"
tokio = "1.49.0"
# tower = "0.5"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
wiremock = "0.6.5"
