[workspace]
resolver = "3"
members = ["fred-cal", "xtask"]
default-members = ["fred-cal"]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
cargo_metadata = "0.23.1"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.0"
clap = "4.6.0"
clap-cargo = "0.18.3"
clap-verbosity-flag = "3.0.4"
color-eyre = "0.6.5"
dirs = "6.0.0"
duct = "1.1.1"
# fast-dav-rs = { git = "https://github.com/fredclausen/fast-dav-rs", branch = "shell-fixes-and-nixos" }
fast-dav-rs = "0.4.2"
futures = "0.3.32"
icalendar = "0.17.10"
rrule = "0.14.0"
rustls = { version = "0.23.37", features = ["ring"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.148"
temp-env = "0.3.6"
tempfile = "3.27.0"
tokio = "1.51.0"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
wiremock = "0.6.5"
