[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
dirs.workspace = true
fast-dav-rs.workspace = true
icalendar.workspace = true
quick-xml = "0.38.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
rrule.workspace = true
rustls = { version = "0.23", features = ["ring"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
temp-env.workspace = true
wiremock.workspace = true
rustls = { version = "0.23", features = ["ring"] }

[package]
name = "fred-cal"
edition.workspace = true
license.workspace = true
version.workspace = true
