[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
dirs.workspace = true
fast-dav-rs.workspace = true
futures.workspace = true
icalendar.workspace = true
rrule.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
temp-env.workspace = true
wiremock.workspace = true
rustls.workspace = true

[package]
name = "fred-cal"
edition.workspace = true
license.workspace = true
version.workspace = true
